--- a/software/phenotypes.Rmd
+++ b/software/phenotypes.Rmd
@@ -20,28 +20,73 @@ Things to look for are different depending on the type of phenotype e.g. if the 
 
 ### Continuous trait
 
-```{r cars}
+An example is **plant height** (**PH**) from the rice (*Oryza sativa*) dataset.
+In a continuos trait, one first looks at summary statistics: average value, standard deviation, minimum and maximum value: 
+
+```{r cars, echo=FALSE}
 setwd("~/Dropbox/cursos/berlin2018/data/")
 pheno_continuous <- read.table("phenotypes_rice.txt", header = TRUE)
 
-pheno_continuous %>%
+D <- pheno_continuous %>%
   group_by(population) %>%
   summarise(N=n(), avgPH=mean(phenotype), stdPH=sd(phenotype), minPH=min(phenotype),
             maxPH=max(phenotype))
 
+kable(D)
 ```
+
+The distribution of a continuos trait is an important aspect: this may give indications as to the best way to model the trait in the GWAS analysis.
+
+```{r}
+p <- ggplot(pheno_continuous, aes(x=phenotype)) + geom_density()
+p <- p + xlab("plant height")
+p
+```
+
+```{r}
+p <- ggplot(pheno_continuous, aes(x=phenotype)) + geom_density()
+p <- p + geom_vline(aes(xintercept=mean(phenotype)), color="blue", linetype="dashed", size=1)
+p <- p + xlab("plant height")
+p
+```
+
+
+```{r}
+p <- ggplot(pheno_continuous, aes(x=phenotype)) + geom_density(aes(fill=population), alpha=0.4)
+p <- p + scale_fill_manual(values=c("#999999", "#E69F00", "#56B4E9","#FFE4B5"))
+p <- p + xlab("plant height")
+p
+```
+
+```{r}
+p <- ggplot(pheno_continuous, aes(x=phenotype, color=population, fill=population))
+p <- p + geom_histogram(aes(y=..density..), alpha=0.5, position="identity")
+p <- p + geom_density(alpha=.2) 
+p
+```
+
+Boxplots are an effective way to visualize distributions:
+
+```{r}
+p <- ggplot(pheno_continuous, aes(x=population,y=phenotype)) + geom_boxplot(aes(fill=population))
+p <- p + xlab("population") + ylab("plant height")
+p
+```
+
+
 
 ### Binary trait
 
-```{r binary}
+```{r binary, echo=FALSE}
 setwd("~/Dropbox/cursos/berlin2018/data/")
 pheno_binary <- read.table("pheno_genabel.dat", header = TRUE)
 
-pheno_binary %>%
+D <- pheno_binary %>%
   group_by(breed, phenotype) %>%
   summarise(N=n()) %>%
   spread(key = phenotype, value = N)
 
+kable(D)
 ```
 
 ## Including Plots
