--- a/software/knni.Rmd
+++ b/software/knni.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Genotype imputation with KNN: a demonstration"
 author: "Filippo Biscarini"
-date: "November 13, 2015"
+date: "October 25, 2018"
 output: html_document
 ---
 
@@ -17,7 +17,7 @@ Let's look at this:
 
 - $K$ is the chosen **number of neighbors** to consider
 - $x_0$ is the **observation** we want to classify (we have features but not know the class it belongs to)
-- $\mathcal{N}_0$ is such neighborhood of $x_0$
+- $\mathcal{N}_0$ is the neighborhood around $x_0$
 - $I(y_i=j)$ is the number of neighbors in $\mathcal{N}_0$ belonging to class $j$
 
 The observation $x_0$ is then classified to the class with the largest probability ("Bayes rule").
@@ -259,7 +259,7 @@ results <- imputedM[is.na(missing_map)]==Mreduced[is.na(missing_map)]
 accuracy <- length(results[results==TRUE])/length(results)
 ```
 
-<span style="background-color:yellow">The accuracy of imputation with the our R code is:<strong> `r accuracy`</strong></span>
+<span style="background-color:yellow">The accuracy of imputation with our R code is:<strong> `r accuracy`</strong></span>
 
 This is expected to be higher than the accuracy obtained with the native *knnImputation()* function, since we used the Hamming distance which is more appropriate for SNP genotype data.
 
